# PersonalFinanceManager

./: .gitignore  CMakeLists.txt  README.md  review_code.txt
.github/workflows/: macos-build.yml
GUI/: README.md  mainGUI.cpp  sketch.txt
GUI/include/: App.h  DataManager.h  Dialog.h  Dropdown.h  Helper.h  LayoutHelper.h  MasterDataWindow.h  RecurringWindow.h  ScrollArea.h  StatisticWindow.h  TextInput.h  TransactionWindow.h  button.h  dashboard.h
GUI/src/: App.cpp  DataManager.cpp  Dialog.cpp  Dropdown.cpp  Helper.cpp  LayoutHelper.cpp  MasterDataWindow.cpp  RecurringWindow.cpp  ScrollArea.cpp  StatisticWindow.cpp  TextInput.cpp  TransactionWindow.cpp  button.cpp  dashboard.cpp
include/: Category.h  ExpenseTransaction.h  IncomeSourceTable.h  IncomeTransaction.h  NameTable.h  date.h  recurring.h  statistic.h  wallet.h
prebuild/: PersonalFinanceManager
src/: Category.cpp  ExpenseTransaction.cpp  IncomeSourceTable.cpp  IncomeTransaction.cpp  NameTable.cpp  date.cpp  main.cpp  mainCLI.cpp  recurring.cpp  statistic.cpp  wallet.cpp
